@@ -1,5 +1,5 @@
 #coding: utf-8
 
-__version__ = '0.3.16'
+__version__ = '0.3.17'
 
 from .db import *
