@@ -1,7 +1,8 @@
-lorm 0.3.15 2017-5-12
+lorm 0.3.17 2017-5-12
 
 [NEW]   dynamically configured driver
         remove install requires
+        add "ondup" filter
 
 
 lorm 0.3.14 2017-5-5
